feat: Add some small UI improvements (#206)
* feat: Add some small UI improvements

* CR changes
